// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationSortableQuestion /> renders correctly 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="row"
  listItem={false}
  style={
    Object {
      "marginLeft": 0,
      "marginRight": 0,
    }
  }
>
  <div
    className="col-xs-1"
  >
    <sortableHandle />
  </div>
  <div
    className="col-xs-8"
  >
    <strong />
    <div>
      <FormattedMessage
        id="global.question.types.select"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="col-xs-3"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="pull-right"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="glodal.delete"
        values={Object {}}
      />
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="pull-right"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginRight": 5,
        }
      }
    >
      <FormattedMessage
        id="glodal.edit"
        values={Object {}}
      />
    </Button>
  </div>
</ListGroupItem>
`;

exports[`<RegistrationSortableQuestion /> renders correctly when not a superAdmin 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="row"
  listItem={false}
  style={
    Object {
      "marginLeft": 0,
      "marginRight": 0,
    }
  }
>
  <div
    className="col-xs-1"
  >
    <sortableHandle />
  </div>
  <div
    className="col-xs-8"
  >
    <strong />
    <div>
      <FormattedMessage
        id="global.question.types.select"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="col-xs-3"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="pull-right"
      disabled={true}
      onClick={null}
    >
      <FormattedMessage
        id="glodal.delete"
        values={Object {}}
      />
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="pull-right"
      disabled={true}
      onClick={null}
      style={
        Object {
          "marginRight": 5,
        }
      }
    >
      <FormattedMessage
        id="glodal.edit"
        values={Object {}}
      />
    </Button>
  </div>
</ListGroupItem>
`;
